<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_h"
        android:background="@color/title_blue"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="320"
            android:background="@drawable/back"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/titles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:gravity="center"
            android:text="@string/f_seting_feedback"
            android:textSize="@dimen/main_title_text_size"
            android:textColor="@color/title_text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="325" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/f_feedback_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/bg_white_corners"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:maxLines="7"
            android:minHeight="150dp"
            android:minLines="1"
            android:scrollbars="vertical"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="240" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="200"
            android:gravity="center"
            android:text="@string/f_feedback_contact"
            android:textSize="@dimen/tv_account" />

        <EditText
            android:id="@+id/f_feedback_contact_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="100"
            android:maxLength="40"
            android:background="@drawable/bg_white_corners"
            android:hint="@string/f_feedback_contact_hint"
            android:includeFontPadding="false"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/edit_hint_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="220" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/f_feedback_submit_btn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_blue_selector_bg"
            android:text="@string/f_share_submit_hint"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>
