<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:background="@color/title_blue"
        android:gravity="center_horizontal"
        android:text="@string/ac_main_bottom_first"
        android:textColor="@color/title_text_color"
        android:textSize="@dimen/main_title_text_size" />

    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_bottom"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/main_bottom"
        android:background="@color/middle_white" />

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ac_main_bottom_height"
        android:layout_alignParentBottom="true"
        android:background="@color/ac_main_bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_home_bottom_home"
                android:layout_width="@dimen/ac_main_bottom_btn_w"
                android:layout_height="@dimen/ac_main_bottom_btn_w"
                android:background="@drawable/homepress" />

            <TextView
                android:id="@+id/tv_home_bottom_home"
                android:layout_width="@dimen/ac_main_bottom_tv_w"
                android:layout_height="@dimen/ac_main_bottom_tv_h"
                android:gravity="center_horizontal"
                android:text="@string/ac_main_bottom_first"
                android:textColor="@color/ac_main_bottom_tv_press"
                android:textSize="@dimen/ac_main_bottom_tv_s" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_home_bottom_wrong"
                android:layout_width="@dimen/ac_main_bottom_btn_w"
                android:layout_height="@dimen/ac_main_bottom_btn_w"
                android:background="@drawable/wrong_subjects_lift" />

            <TextView
                android:id="@+id/tv_home_bottom_wrong"
                android:layout_width="@dimen/ac_main_bottom_tv_w"
                android:layout_height="@dimen/ac_main_bottom_tv_h"
                android:gravity="center_horizontal"
                android:text="@string/ac_main_bottom_two"
                android:textColor="@color/ac_main_bottom_tv_lift"
                android:textSize="@dimen/ac_main_bottom_tv_s" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_home_bottom_collect"
                android:layout_width="@dimen/ac_main_bottom_btn_w"
                android:layout_height="@dimen/ac_main_bottom_btn_w"
                android:background="@drawable/collect_subjects_lift" />

            <TextView
                android:id="@+id/tv_home_bottom_collect"
                android:layout_width="@dimen/ac_main_bottom_tv_w"
                android:layout_height="@dimen/ac_main_bottom_tv_h"
                android:gravity="center_horizontal"
                android:text="@string/ac_main_bottom_three"
                android:textColor="@color/ac_main_bottom_tv_lift"
                android:textSize="@dimen/ac_main_bottom_tv_s" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_home_bottom_book"
                android:layout_width="@dimen/ac_main_bottom_btn_w"
                android:layout_height="@dimen/ac_main_bottom_btn_w"
                android:background="@drawable/book_lift" />

            <TextView
                android:id="@+id/tv_home_bottom_book"
                android:layout_width="@dimen/ac_main_bottom_tv_w"
                android:layout_height="@dimen/ac_main_bottom_tv_h"
                android:gravity="center_horizontal"
                android:text="@string/ac_main_bottom_four"
                android:textColor="@color/ac_main_bottom_tv_lift"
                android:textSize="@dimen/ac_main_bottom_tv_s" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_home_bottom_set"
                android:layout_width="@dimen/ac_main_bottom_btn_w"
                android:layout_height="@dimen/ac_main_bottom_btn_w"
                android:background="@drawable/setlift" />

            <TextView
                android:id="@+id/tv_home_bottom_set"
                android:layout_width="@dimen/ac_main_bottom_tv_w"
                android:layout_height="@dimen/ac_main_bottom_tv_h"
                android:gravity="center_horizontal"
                android:text="@string/ac_main_bottom_five"
                android:textColor="@color/ac_main_bottom_tv_lift"
                android:textSize="@dimen/ac_main_bottom_tv_s" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
